[tool.poetry]
name = "http-parser"
version = "0.1.0"
description = "An http parser for Python"
authors = ["Matt Frey <thatmattfrey@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
